stylesheets bug fix and add coffescript doc readme

--- a/app/assets/stylesheets/activeadmin/_medium_editor_input.sass
+++ b/app/assets/stylesheets/activeadmin/_medium_editor_input.sass
@@ -1,4 +1,4 @@
-@import './medium_editor/medium_editor'
+@import './medium_editor/medium_editor.css'
 
 body.active_admin form
   textarea.medium-editor-hidden
