Fix CSS import error

--- a/app/assets/stylesheets/activeadmin/_medium_editor_input.sass
+++ b/app/assets/stylesheets/activeadmin/_medium_editor_input.sass
@@ -1,4 +1,4 @@
-@import 'activeadmin/medium_editor/medium_editor.css'
+@import 'activeadmin/medium_editor/medium_editor'
 
 body.active_admin form
   textarea.medium-editor-hidden
