--- a/app/assets/stylesheets/activeadmin/_medium_editor_input.sass
+++ b/app/assets/stylesheets/activeadmin/_medium_editor_input.sass
@@ -5,13 +5,14 @@ body.active_admin form
     display: none
   .medium-editor-element
     background-color: #fff
-    border-radius: 5px
-    border: 1px solid #96a8b2
+    border-radius: 3px
+    border: 1px solid #c9d0d6
     display: inline-block
     max-height: 200px
+    min-height: 100px
     overflow-y: scroll
-    padding: 4px 6px 6px 6px
-    width: 450px
+    padding: 8px 10px 7px
+    width: calc(80% - 22px)
     // reset internal elements
     *
       margin: initial
